--- a/hexcodes.html
+++ b/hexcodes.html
@@ -1,4 +1,4 @@
-<html>
+<html><body>
 <div class="OutlineGroup" style="width: 624px;">
   <div class="OutlineElement Ltr">
     <div id="WACViewPanel_EditingElement_WrappingDiv" style="height: 40.1121px; width: 624px; display: block; position: absolute; visibility: visible; max-height: none; opacity: 0; top: 0px; left: 0px; z-index: -2147483648;">
@@ -55,4 +55,5 @@
     </ul>
   </div>
 </div>
+  </body>
 </html>
